--- a/sobre.css
+++ b/sobre.css
@@ -271,22 +271,22 @@ padding: 0.5rem;
 margin-bottom: -4rem;
 }
 
-.fa-facebook {
+.fa-facebook:hover {
   color: #3b5998;
 }
-.fa-twitter {
+.fa-twitter:hover {
   color: #00aced;
 }
-.fa-linkedin {
+.fa-linkedin:hover {
   color: #0077B5;
 }
-.fa-google-plus {
+.fa-google-plus:hover {
   color: #dd4b39;
 }
-.fa-skype {
+.fa-skype:hover {
   color: #00aff0;
 }
-.fa-facebook:hover, .fa-twitter:hover, .fa-linkedin:hover, .fa-google-plus:hover, .fa-skype:hover {
+.fa-facebook, .fa-twitter, .fa-linkedi , .fa-google-plus , .fa-skype {
   color: #dfdfdf;
 }
 
