--- a/servicos.css
+++ b/servicos.css
@@ -59,22 +59,87 @@ html, body {
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,255,255, 0.7)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
 }
 
-/* Servicos */
 
-.servico img {
-  width: 100%;
-  height: 180px;
+/*Opening Image*/
+header.masthead {
+  margin-bottom:50px;
+  background:no-repeat center center;
+  background-color:#868e96;
+  background-attachment:scroll;
+  position:relative;
+  background-size:cover
+  }
+header.masthead .overlay {
+  position:absolute;
+  top:0;
+  left:0;
+  height:100%;
+  width:100%;
+  background-color:#212529;
+  opacity:.5
+  }
+header.masthead .page-heading,header.masthead .post-heading,header.masthead .site-heading {
+  padding:200px 0 150px;
+  color:#fff
+  }
+@media only screen and (min-width:768px) {
+  header.masthead .page-heading,header.masthead .post-heading,header.masthead .site-heading {
+    padding:200px 0
+    }
+  }
+header.masthead .page-heading,header.masthead .site-heading {
+  text-align:center
+  }
+header.masthead .page-heading h1,header.masthead .site-heading h1 {
+  font-size:50px;
+  margin-top:0
+  }
+header.masthead .page-heading .subheading,header.masthead .site-heading .subheading {
+  font-size:24px;
+  font-weight:300;
+  line-height:1.1;
+  display:block;
+  margin:10px 0 0;
+  font-family:'Open Sans','Helvetica Neue',Helvetica,Arial,sans-serif
+  }
+@media only screen and (min-width:768px) {
+header.masthead .page-heading h1,header.masthead .site-heading h1 {
+  font-size:80px
+  }
 }
-.carousel-caption {
-  position: absolute;
-  top: 35%;
-  transform: translateY(-50%);
+header.masthead .post-heading h1 {
+font-size:35px
 }
-.carousel-caption h3 {
-  font-size: 160%;
-  font-weight: 100;
-  text-shadow: 1px 1px 10px #000;
-  padding-bottom: 1rem;
+header.masthead .post-heading .meta,header.masthead .post-heading .subheading {
+line-height:1.1;
+display:block
+}
+header.masthead .post-heading .subheading
+{font-size:24px;
+font-weight:600;
+margin:10px 0 30px;
+font-family:'Open Sans','Helvetica Neue',Helvetica,Arial,sans-serif
+}
+header.masthead .post-heading .meta {
+font-size:20px;
+font-weight:300;
+font-style:italic;
+font-family:Lora,'Times New Roman',serif
+}
+header.masthead .post-heading .meta a {
+color:#fff
+}
+@media only screen and (min-width:768px) {
+header.masthead .post-heading h1 {font-size:55px}
+header.masthead .post-heading .subheading {font-size:30px}
+}
+
+
+/* Servicos */
+.welcome hr {
+  border-top: 2px solid #b4b4b4;
+  width: 75%;
+  margin-top: .3rem;
 }
 
 .btn-outline-light {
@@ -85,23 +150,89 @@ html, body {
   text-justify: inter-word;
 }
 
-.servicos_padding {
-  padding-right: 1rem;
-  padding-left: 1rem;
-  padding-top: 0;
-  padding-bottom: 0;
-
-}
 .btn-outline-light{
-  background-color: rgba(248,248,255,0.9);
-  border: 1px solid rgba(248,248,255);
+  background-color: rgb(240,240,240);
+  border: 1px solid rgb(240,240,240);
   color: #000000;
 }
 .btn-outline-light:hover {
-  background-color: rgba(248,248,255, 0.5);
-  border: 1px solid rgba(248,248,255, 0.5);
+  background-color: rgb(240,240,240,0.5);
+  border: 1px solid rgb(240,240,240,0.5);
   color: #000000;
 }
+
+.hr_blue {
+  border-top: 2px solid #248EFF;
+  width: 50%;
+  margin-left: 0rem;
+}
+.hr_modal {
+  border-top: 1px solid #248EFF;
+  width: 80%;
+  margin-left: 0rem;
+}
+
+
+@media (min-width: 250px) {
+  .left {
+    padding-right: 4rem;
+    padding-left: 4rem;
+  }
+  .right {
+    padding-right: 4rem;
+    padding-left: 4rem;
+  }
+}
+@media (min-width: 768px) {
+  .left {
+    padding-right: 0rem;
+    padding-left: 5rem;
+  }
+  .right {
+    padding-left: 0rem;
+    padding-right: 5rem;
+  }
+}
+
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto; /* 15% from the top and centered */
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%; /* Could be more or less, depending on screen size */
+}
+
+/* The Close Button */
+.close1, .close2, .close3, .close4, .close5, .close6 {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close1:hover, .close1:focus, .close2:hover, .close2:focus, .close3:hover, .close3:focus, .close4:hover, .close4:focus, .close5:hover, .close5:focus, .close6:hover, .close6:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+
+
 
 /*Footer*/
 footer {
