--- a/team.css
+++ b/team.css
@@ -6,6 +6,7 @@ html, body {
   overflow-x: hidden;
   font-family: 'Poppins' , sans-serif;
   color: #222;
+  -webkit-overflow-scrolling: touch;
 }
 
 .padding {
