--- a/equipa.css
+++ b/equipa.css
@@ -138,15 +138,96 @@ header.masthead .post-heading .subheading {font-size:30px}
 }
 
 /*Equipa*/
-.btn, .btn:hover {
-  border: none;
-  background: none;
-  padding-bottom: 0rem;
+.row-equipa {
+  padding-left: 10%;
+  padding-right: 10%;
+}
+.person {
+  height: auto;
+  display: block;
+  margin: 0 auto;
+  margin-bottom: 0;
+  padding-bottom: 0;
+}
+.perfil h3 h5 p {
+  align:left;
+}
+.portfolio-item {
+  margin: 0 auto;
 }
 .welcome hr {
   border-top: 2px solid #b4b4b4;
   width: 75%;
   margin-top: .3rem;
+}
+
+.btn-outline-light {
+  font-size: 100%;
+  background-color: rgb(240,240,240);
+  border: 1px solid rgb(240,240,240);
+  color: #000000;
+}
+.btn-outline-light:hover {
+  background-color: rgb(240,240,240,0.7);
+  border: 1px solid rgb(240,240,240,0.7);
+  color: #000000;
+}
+
+.hr_blue {
+  border-top: 2px solid #248EFF;
+  width: 50%;
+  margin-left: 0rem;
+}
+.hr_modal {
+  border-top: 1px solid #248EFF;
+  width: 80%;
+  margin-left: 0rem;
+}
+
+
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto; /* 15% from the top and centered */
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%; /* Could be more or less, depending on screen size */
+}
+
+/* The Close Button */
+.close1, .close2, .close3, .close4, .close5, .close6, .close7, .close8, .close9, .close10, .close11, .close12 {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close1:hover, .close1:focus, .close2:hover, .close2:focus, .close3:hover, .close3:focus, .close4:hover, .close4:focus, .close5:hover, .close5:focus, .close6:hover, .close6:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+
+.close7:hover, .close7:focus, .close8:hover, .close8:focus, .close9:hover, .close9:focus, .close10:hover, .close10:focus, .close11:hover, .close11:focus, .close12:hover, .close12:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
 }
 
 #portfolio{
@@ -197,6 +278,7 @@ header.masthead .post-heading .subheading {font-size:30px}
 #portfolio .name {
   font-weight: bold;
 }
+#
 #portfolio .person {
   height: auto;
   display: block;
@@ -204,7 +286,6 @@ header.masthead .post-heading .subheading {font-size:30px}
   margin-bottom: 0;
   padding-bottom: 0;
 }
-
 
 /*Modal*/
 /* The Modal (background) */
@@ -231,14 +312,24 @@ header.masthead .post-heading .subheading {font-size:30px}
 }
 
 /* The Close Button */
-.close1, .close2, .close3, .close4, .close5, .close6 {
+.close1, .close2, .close3, .close4, .close5, .close6, .close7, .close8, .close9, .close10, .close11, .close12, .close13, .close14, .close15, .close16, .close17, .close18, .close19, .close20 {
   color: #aaa;
   float: right;
   font-size: 28px;
   font-weight: bold;
 }
 
-.close1:hover, .close1:focus, .close2:hover, .close2:focus, .close3:hover, .close3:focus, .close4:hover, .close4:focus, .close5:hover, .close5:focus, .close6:hover, .close6:focus {
+.close1:hover, .close1:focus, .close2:hover, .close2:focus, .close3:hover, .close3:focus, .close4:hover, .close4:focus, .close5:hover, .close5:focus, .close6:hover, .close6:focus, .close7:hover, .close7:focus, .close8:hover, .close8:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+.close9:hover, .close9:focus, .close10:hover, .close10:focus, .close11:hover, .close11:focus, .close12:hover, .close12:focus, .close13:hover, .close13:focus, .close14:hover, .close14:focus, .close15:hover, .close15:focus, .close16:hover, .close16:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+.close17:hover, .close17:focus, .close18:hover, .close18:focus, .close19:hover, .close19:focus, .close20:hover, .close20:focus {
   color: black;
   text-decoration: none;
   cursor: pointer;
