--- a/sobre.css
+++ b/sobre.css
@@ -75,9 +75,7 @@ cursor: pointer;
 position: relative;
 display: inline-block;
 }
-.dropdown-content a {
-color: #222
-}
+
 /* Dropdown Content (Hidden by Default) */
 .dropdown-content {
 display: none;
@@ -90,14 +88,14 @@ z-index: 1;
 
 /* Links inside the dropdown */
 .dropdown-content a {
-color: black;
+color: #888888;
 padding: 12px 16px;
 text-decoration: none;
 display: block;
 }
 
 /* Change color of dropdown links on hover */
-.dropdown-content a:hover {background-color: #ddd;}
+.dropdown-content a:hover {color:	#686868;}
 
 /* Show the dropdown menu on hover */
 .dropdown:hover .dropdown-content {display: block;}
