--- a/outros.css
+++ b/outros.css
@@ -74,9 +74,7 @@ cursor: pointer;
 position: relative;
 display: inline-block;
 }
-.dropdown-content a {
-color: #222
-}
+
 /* Dropdown Content (Hidden by Default) */
 .dropdown-content {
 display: none;
@@ -89,21 +87,20 @@ z-index: 1;
 
 /* Links inside the dropdown */
 .dropdown-content a {
-color: black;
+color: #888888;
 padding: 12px 16px;
 text-decoration: none;
 display: block;
 }
 
 /* Change color of dropdown links on hover */
-.dropdown-content a:hover {background-color: #ddd;}
+.dropdown-content a:hover {color:	#686868;}
 
 /* Show the dropdown menu on hover */
 .dropdown:hover .dropdown-content {display: block;}
 
 /* Change the background color of the dropdown button when the dropdown content is shown */
 /*.dropdown:hover .dropbtn {background-color: #3e8e41;}*/
-
 
 /*Opening Image*/
 header.masthead {
