--- a/carreiras.css
+++ b/carreiras.css
@@ -102,6 +102,286 @@ display: block;
 /* Change the background color of the dropdown button when the dropdown content is shown */
 /*.dropdown:hover .dropbtn {background-color: #3e8e41;}*/
 
+/*Opening Image*/
+header.masthead {
+  margin-bottom:50px;
+  background:no-repeat center center;
+  background-color:#868e96;
+  background-attachment:scroll;
+  position:relative;
+  background-size:cover
+  }
+header.masthead .overlay {
+  position:absolute;
+  top:0;
+  left:0;
+  height:100%;
+  width:100%;
+  background-color:#212529;
+  opacity:.5
+  }
+header.masthead .page-heading,header.masthead .post-heading,header.masthead .site-heading {
+  padding:200px 0 150px;
+  color:#fff
+  }
+
+@media only screen and (min-width:768px) {
+  header.masthead .page-heading,header.masthead .post-heading,header.masthead .site-heading {
+    padding:200px 0
+    }
+  }
+header.masthead .page-heading,header.masthead .site-heading {
+text-align: center;
+}
+header.masthead .page-heading h1,header.masthead .site-heading h1 {
+  font-size:50px;
+  margin-top:0
+  }
+header.masthead .page-heading .subheading,header.masthead .site-heading .subheading {
+  font-size:24px;
+  font-weight:300;
+  line-height:1.1;
+  display:block;
+  margin:10px 0 0;
+  font-family:'Open Sans','Helvetica Neue',Helvetica,Arial,sans-serif
+  }
+@media only screen and (min-width:768px) {
+header.masthead .page-heading h1,header.masthead .site-heading h1 {
+  font-size:80px
+}
+}
+header.masthead .post-heading h1 {
+  font-size:35px
+}
+header.masthead .post-heading .meta,header.masthead .post-heading .subheading {
+  line-height:1.1;
+  display:block
+}
+header.masthead .post-heading .subheading {
+  font-size:24px;
+  font-weight:600;
+  margin:10px 0 30px;
+  font-family:'Open Sans','Helvetica Neue',Helvetica,Arial,sans-serif
+}
+header.masthead .post-heading .meta {
+font-size:20px;
+font-weight:300;
+font-style:italic;
+font-family:Lora,'Times New Roman',serif
+}
+header.masthead .post-heading .meta a {
+color:#fff
+}
+@media only screen and (min-width:768px) {
+header.masthead .post-heading h1 {font-size:55px}
+header.masthead .post-heading .subheading {font-size:30px}
+}
+
+/*Candidate-se*/
+u {
+    text-decoration: underline;
+    text-decoration-color: #248eff;
+    font-weight: bold;
+    font-size: 105%;
+}
+/*Equipa*/
+.row-equipa {
+padding-left: 10%;
+padding-right: 10%;
+padding-bottom: 0rem;
+padding-top: 0rem;
+}
+.person {
+height: auto;
+display: block;
+margin: 0 auto;
+margin-bottom: 0;
+padding-bottom: 0;
+}
+
+.perfil h3 h5 p {
+align:left;
+}
+.portfolio-item {
+margin: 0 auto;
+}
+.welcome hr {
+border-top: 2px solid #b4b4b4;
+width: 75%;
+margin-top: .3rem;
+}
+
+.btn-outline-light {
+font-size: 100%;
+background-color: rgb(240,240,240);
+border: 1px solid rgb(240,240,240);
+color: #000000;
+}
+.btn-outline-light:hover {
+background-color: rgb(240,240,240,0.7);
+border: 1px solid rgb(240,240,240,0.7);
+color: #000000;
+}
+
+.hr_blue {
+border-top: 2px solid #248EFF;
+width: 50%;
+margin-left: 0rem;
+}
+.hr_modal {
+border-top: 1px solid #248EFF;
+width: 80%;
+margin-left: 0rem;
+}
+
+
+/* The Modal (background) */
+.modal {
+display: none; /* Hidden by default */
+position: fixed; /* Stay in place */
+z-index: 1; /* Sit on top */
+left: 0;
+top: 0;
+width: 100%; /* Full width */
+height: 100%; /* Full height */
+overflow: auto; /* Enable scroll if needed */
+background-color: rgb(0,0,0); /* Fallback color */
+background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+
+.modal-content {
+background-color: #fefefe;
+margin: 15% auto; /* 15% from the top and centered */
+padding: 20px;
+border: 1px solid #888;
+width: 80%; /* Could be more or less, depending on screen size */
+}
+
+/* The Close Button */
+.close1, .close2, .close3, .close4, .close5, .close6, .close7, .close8, .close9, .close10, .close11, .close12 {
+color: #aaa;
+float: right;
+font-size: 28px;
+font-weight: bold;
+}
+
+.close1:hover, .close1:focus, .close2:hover, .close2:focus, .close3:hover, .close3:focus, .close4:hover, .close4:focus, .close5:hover, .close5:focus, .close6:hover, .close6:focus {
+color: black;
+text-decoration: none;
+cursor: pointer;
+}
+
+
+.close7:hover, .close7:focus, .close8:hover, .close8:focus, .close9:hover, .close9:focus, .close10:hover, .close10:focus, .close11:hover, .close11:focus, .close12:hover, .close12:focus {
+color: black;
+text-decoration: none;
+cursor: pointer;
+}
+
+#portfolio{
+background-color: #ffffff;
+}
+
+#portfolio .portfolio-item {
+right: 0;
+margin: 0 0 15px;
+}
+
+#portfolio .portfolio-item .portfolio-link {
+position: relative;
+display: block;
+max-width: 400px;
+margin: 0 auto;
+cursor: pointer;
+}
+
+#portfolio .portfolio-item .portfolio-link .portfolio-hover {
+position: absolute;
+width: 100%;
+height: 100%;
+-webkit-transition: all ease 0.5s;
+transition: all ease 0.5s;
+opacity: 0;
+background: rgb(0,0,0,0.6);
+}
+
+#portfolio .portfolio-item .portfolio-link .portfolio-hover:hover {
+opacity: 1;
+}
+
+#portfolio .portfolio-item .portfolio-link .portfolio-hover .portfolio-hover-content {
+font-size: 19px;
+position: absolute;
+top: 20%;
+width: 100%;
+height: 20px;
+margin-top: -12px;
+text-align: center;
+color: white;
+}
+
+#portfolio * {
+z-index: 2;
+}
+#portfolio .person {
+height: auto;
+display: block;
+margin: 0 auto;
+margin-bottom: 0;
+padding-bottom: 0;
+}
+
+/*Modal*/
+/* The Modal (background) */
+.modal {
+display: none; /* Hidden by default */
+position: fixed; /* Stay in place */
+z-index: 1; /* Sit on top */
+left: 0;
+top: 0;
+width: 100%; /* Full width */
+height: 100%; /* Full height */
+overflow: auto; /* Enable scroll if needed */
+background-color: rgb(0,0,0); /* Fallback color */
+background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content {
+background-color: #fefefe;
+margin: 15% auto; /* 15% from the top and centered */
+padding: 20px;
+border: 1px solid #888;
+width: 80%; /* Could be more or less, depending on screen size */
+}
+
+/* The Close Button */
+.close1, .close2, .close3, .close4, .close5, .close6, .close7, .close8, .close9, .close10, .close11, .close12, .close13, .close14, .close15, .close16, .close17, .close18, .close19, .close20 {
+color: #aaa;
+float: right;
+font-size: 28px;
+font-weight: bold;
+}
+
+.close1:hover, .close1:focus, .close2:hover, .close2:focus, .close3:hover, .close3:focus, .close4:hover, .close4:focus, .close5:hover, .close5:focus, .close6:hover, .close6:focus, .close7:hover, .close7:focus, .close8:hover, .close8:focus {
+color: black;
+text-decoration: none;
+cursor: pointer;
+}
+.close9:hover, .close9:focus, .close10:hover, .close10:focus, .close11:hover, .close11:focus, .close12:hover, .close12:focus, .close13:hover, .close13:focus, .close14:hover, .close14:focus, .close15:hover, .close15:focus, .close16:hover, .close16:focus {
+color: black;
+text-decoration: none;
+cursor: pointer;
+}
+.close17:hover, .close17:focus, .close18:hover, .close18:focus, .close19:hover, .close19:focus, .close20:hover, .close20:focus {
+color: black;
+text-decoration: none;
+cursor: pointer;
+}
+
+/* --- */
 
 /*Footer*/
 footer {
