--- a/carreiras.css
+++ b/carreiras.css
@@ -443,7 +443,9 @@ margin-bottom: -4rem;
 .contact_us:hover  {
   background-color: #4fa4ff;
 }
-
+.contact_us a {
+  color:#ffffff;
+}
 
 /*---Media Queries --*/
 @media (min-width: 1200px) {
