--- a/contact_us.css
+++ b/contact_us.css
@@ -159,7 +159,9 @@ margin-bottom: -4rem;
 .contact_form a:hover {
   color: #248eff;
 }
-
+.contact_us a {
+  color:#ffffff;
+}
 
 /*---Media Queries --*/
 @media (min-width: 1200px) {
