--- a/equipa.css
+++ b/equipa.css
@@ -527,7 +527,9 @@ background-color: #248eff
 .contact_us:hover  {
 background-color: #4fa4ff;
 }
-
+.contact_us a {
+  color:#ffffff;
+}
 
 /*---Media Queries --*/
 @media (min-width: 1200px) {
