--- a/index.css
+++ b/index.css
@@ -163,7 +163,9 @@ margin-bottom: -4rem;
 .contact_us:hover  {
   background-color: #4fa4ff;
 }
-
+.contact_us a {
+  color:#ffffff;
+}
 
 
 /*---Media Queries --*/
