--- a/sobre.css
+++ b/sobre.css
@@ -343,7 +343,9 @@ margin-bottom: -4rem;
 .contact_us:hover  {
   background-color: #4fa4ff;
 }
-
+.contact_us a {
+  color:#ffffff;
+}
 
 /*---Media Queries --*/
 @media (min-width: 1200px) {
