--- a/team.css
+++ b/team.css
@@ -181,7 +181,9 @@ margin-bottom: -4rem;
 .contact_form a:hover {
   color: #248eff;
 }
-
+.contact_us a {
+  color:#ffffff;
+}
 
 /*---Media Queries --*/
 @media (min-width: 1200px) {
